	* routeserver.texi: remove extension in image macros.
	* quagga.info: updated build
	* Makefile.am: Add rules to build eps (using 'convert'), png (using
	  dia). Add figures_BUILT_SOURCES to extra_dist to avoid the 
	  dependency on dia :) (amongst other things) for dist users.
	  quagga_TEXINFOS should depend on figures_BUILT_SOURCES.
	* .cvsignore: ignore eps files, built from sources
	  
2005-03-25 Jean-Mickael Guerin <jean-mickael.guerin@6wind.com>
	* ipv6.texi: Add new commands for neighbor discovery
	    interface ipv6 nd prefix X:X::X:X/M router-address
	    interface ipv6 nd ra-interval msec
	    interface ipv6 nd home-agent-config-flag
	    interface ipv6 nd home-agent-lifetime
	    interface ipv6 nd home-agent-preference
	    interface ipv6 nd adv-interval-option

2005-02-03 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* basic.texi: Add note about last-resort crash logging to /var/tmp
	  when file logging is not configured.
	* quagga.info: updated build of autogenerated file

2005-01-24 Paul Jakma <paul@dishone.st>

	* quagga.info: Version bump (autogenerated)

2005-01-10 Paul Jakma <paul@dishone.st>

	* texinfo.tex: Updated to a version which understands @{ and @}
	* vtysh.texi: Add node name for @section
	* quagga.info: updated build of autogenerated file

2005-01-07 Paul Jakma <paul@dishone.st>

	* quagga.info: Version bump (autogenerated)

2005-01-05 Paul Jakma <paul@dishone.st>

	* quagga.info: Version bump

2004-12-23 Paul Jakma <paul@dishone.st>

	* quagga.info: Version bump

2004-12-18 Hasso Tepper <hasso at quagga.net>

	* Makefile.am: Add isisd man page to the list. Should fix problem
	  isisd not included in release/snapshot tarballs.

2004-12-07 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* basic.texi: Document new logging features.  Separate basic config
	  commands from basic VTY commands.

2004-11-25 Hasso Tepper <hasso at quagga.net>

	* *.8: Document -g/--group command line switch and some small
	  cosmetical changes.
