@@ -20,10 +20,11 @@ EPSTOPDF = epstopdf
 # The figure sources
 figures_names_parts = -normal-processing -rs-processing \
 	_topologies_full _topologies_rs
-figures_SOURCES := $(figures_names_parts:%=fig%.dia)
-figures_BUILT_SOURCES := $(figures_names_parts:%=fig%.png) \
-			 $(figures_names_parts:%=fig%.eps) \
-			 $(figures_names_parts:%=fig%.pdf)
+figures_sources := $(figures_names_parts:%=fig%.dia)
+figures_png := $(figures_names_parts:%=fig%.png)
+figures_pdf := $(figures_names_parts:%=fig%.pdf)
+figures_eps := $(figures_names_parts:%=fig%.eps)
+figures_built_sources := $(figures_png) $(figures_pdf) $(figures_eps)
 
 # rather twisted logic because we have to build PDFs of the EPS figures for
 # PDFTex and yet build one PDF, quagga.pdf, from texi source. Which means we
@@ -32,7 +33,7 @@ figures_BUILT_SOURCES := $(figures_names_parts:%=fig%.png) \
 # compact it somehow.
 
 # Built from defines.texi.in
-BUILT_SOURCES = defines.texi
+BUILT_SOURCES = defines.texi $(figures_built_sources)
 
 info_TEXINFOS = quagga.texi
 
@@ -42,15 +43,13 @@ info_TEXINFOS = quagga.texi
 
 # Have to manually specify the quagga.pdf rule in order to allow
 # us to have a generic automatic .pdf rule to build the figure sources
-quagga.pdf: quagga.texi \
-            fig-normal-processing.pdf fig_topologies_full.pdf \
-	    fig-rs-processing.pdf fig_topologies_rs.pdf
+quagga.pdf: quagga.texi $(figures_pdf)
 	$(TEXI2PDF) -o "$@" $(info_TEXINFOS)
 
 quagga_TEXINFOS = appendix.texi basic.texi bgpd.texi filter.texi install.texi \
 	ipv6.texi kernel.texi main.texi ospf6d.texi ospfd.texi overview.texi \
 	protocol.texi ripd.texi ripngd.texi routemap.texi snmp.texi \
-	vtysh.texi routeserver.texi defines.texi $(figures_BUILT_SOURCES)
+	vtysh.texi routeserver.texi defines.texi $(figures_png)
 
 %.eps: %.png
 	$(PNGTOEPS) $< "$@"
@@ -65,7 +64,8 @@ man_MANS = vtysh.1 bgpd.8 ospf6d.8 ospfd.8 ripd.8 ripngd.8 zebra.8 isisd.8
 
 EXTRA_DIST = BGP-TypeCode draft-zebra-00.ms draft-zebra-00.txt $(man_MANS) \
 	mpls/ChangeLog.opaque.txt mpls/cli_summary.txt \
-	mpls/opaque_lsa.txt mpls/ospfd.conf $(figures_BUILT_SOURCES)
+	mpls/opaque_lsa.txt mpls/ospfd.conf \
+	$(figures_sources) $(figures_built_sources)
 
 draft-zebra-00.txt:
 	groff -T ascii -ms draft-zebra-00.ms > draft-zebra-00.txt
